test/corpus/propagation.txt
==================
Propagation in expression positions
==================

func load(result<int, string> input) returns result<int, string> {
    auto value = use input
    value = use read()
    print(use read())
    auto total = use read() + 1
    auto nested = use use wrapped()
    auto size = (use read()).size()
    use (read())
    return ok(value)
}

---

(source_file
  (declaration
    (function_declaration
      (identifier)
      (param_list
        (parameter
          (type_name
            (type_path
              (identifier)
              (type_args
                (type_arg_list
                  (type_arg
                    (identifier))
                  (type_arg
                    (identifier))))))
          (identifier)))
      (type_name
        (type_path
          (identifier)
          (type_args
            (type_arg_list
              (type_arg
                (identifier))
              (type_arg
                (identifier))))))
      (block
        (declaration
          (auto_declaration
            (identifier)
            (expression
              (logic_or_expression
                (logic_and_expression
                  (equality_expression
                    (comparison_expression
                      (sum_expression
                        (product_expression
                          (power_expression
                            (unary_expression
                              (unary_expression
                                (postfix_expression
                                  (primary_expression
                                    (identifier)))))))))))))))
        (expression
          (assignment_expression
            (logic_or_expression
              (logic_and_expression
                (equality_expression
                  (comparison_expression
                    (sum_expression
                      (product_expression
                        (power_expression
                          (unary_expression
                            (postfix_expression
                              (primary_expression
                                (identifier)))))))))))
            (expression
              (logic_or_expression
                (logic_and_expression
                  (equality_expression
                    (comparison_expression
                      (sum_expression
                        (product_expression
                          (power_expression
                            (unary_expression
                              (unary_expression
                                (postfix_expression
                                  (call_expression
                                    (call_target
                                      (identifier))))))))))))))))
        (expression
          (logic_or_expression
            (logic_and_expression
              (equality_expression
                (comparison_expression
                  (sum_expression
                    (product_expression
                      (power_expression
                        (unary_expression
                          (postfix_expression
                            (call_expression
                              (call_target
                                (identifier))
                              (argument_list
                                (expression
                                  (logic_or_expression
                                    (logic_and_expression
                                      (equality_expression
                                        (comparison_expression
                                          (sum_expression
                                            (product_expression
                                              (power_expression
                                                (unary_expression
                                                  (unary_expression
                                                    (postfix_expression
                                                      (call_expression
                                                        (call_target
                                                          (identifier))))))))))))))))))))))))))
        (declaration
          (auto_declaration
            (identifier)
            (expression
              (logic_or_expression
                (logic_and_expression
                  (equality_expression
                    (comparison_expression
                      (sum_expression
                        (product_expression
                          (power_expression
                            (unary_expression
                              (unary_expression
                                (postfix_expression
                                  (call_expression
                                    (call_target
                                      (identifier))))))))
                        (product_expression
                          (power_expression
                            (unary_expression
                              (postfix_expression
                                (primary_expression
                                  (literal
                                    (int_literal)))))))))))))))
        (declaration
          (auto_declaration
            (identifier)
            (expression
              (logic_or_expression
                (logic_and_expression
                  (equality_expression
                    (comparison_expression
                      (sum_expression
                        (product_expression
                          (power_expression
                            (unary_expression
                              (unary_expression
                                (unary_expression
                                  (postfix_expression
                                    (call_expression
                                      (call_target
                                        (identifier)))))))))))))))))
        (declaration
          (auto_declaration
            (identifier)
            (expression
              (logic_or_expression
                (logic_and_expression
                  (equality_expression
                    (comparison_expression
                      (sum_expression
                        (product_expression
                          (power_expression
                            (unary_expression
                              (postfix_expression
                                (call_expression
                                  (call_target
                                    (field_access
                                      (member_object
                                        (grouped_expression
                                          (expression
                                            (logic_or_expression
                                              (logic_and_expression
                                                (equality_expression
                                                  (comparison_expression
                                                    (sum_expression
                                                      (product_expression
                                                        (power_expression
                                                          (unary_expression
                                                            (unary_expression
                                                              (postfix_expression
                                                                (call_expression
                                                                  (call_target
                                                                    (identifier))))))))))))))))
                                      (identifier))))))))))))))))
        (expression
          (logic_or_expression
            (logic_and_expression
              (equality_expression
                (comparison_expression
                  (sum_expression
                    (product_expression
                      (power_expression
                        (unary_expression
                          (unary_expression
                            (postfix_expression
                              (primary_expression
                                (grouped_expression
                                  (expression
                                    (logic_or_expression
                                      (logic_and_expression
                                        (equality_expression
                                          (comparison_expression
                                            (sum_expression
                                              (product_expression
                                                (power_expression
                                                  (unary_expression
                                                    (postfix_expression
                                                      (call_expression
                                                        (call_target
                                                          (identifier))))))))))))))))))))))))))
        (statement
          (return_statement
            (expression
              (logic_or_expression
                (logic_and_expression
                  (equality_expression
                    (comparison_expression
                      (sum_expression
                        (product_expression
                          (power_expression
                            (unary_expression
                              (postfix_expression
                                (call_expression
                                  (call_target
                                    (identifier))
                                  (argument_list
                                    (expression
                                      (logic_or_expression
                                        (logic_and_expression
                                          (equality_expression
                                            (comparison_expression
                                              (sum_expression
                                                (product_expression
                                                  (power_expression
                                                    (unary_expression
                                                      (postfix_expression
                                                        (primary_expression
                                                          (identifier))))))))))))))))))))))))))))))

==================
Optional propagation and inspection calls
==================

func find(optional<int> input) returns optional<int> {
    if input.is_none() {
        return none
    }
    auto value = input.value()
    return some(use input)
}

---

(source_file
  (declaration
    (function_declaration
      (identifier)
      (param_list
        (parameter
          (type_name
            (type_path
              (identifier)
              (type_args
                (type_arg_list
                  (type_arg
                    (identifier))))))
          (identifier)))
      (type_name
        (type_path
          (identifier)
          (type_args
            (type_arg_list
              (type_arg
                (identifier))))))
      (block
        (statement
          (if_statement
            (expression
              (logic_or_expression
                (logic_and_expression
                  (equality_expression
                    (comparison_expression
                      (sum_expression
                        (product_expression
                          (power_expression
                            (unary_expression
                              (postfix_expression
                                (call_expression
                                  (call_target
                                    (field_access
                                      (member_object
                                        (identifier))
                                      (identifier))))))))))))))
            (block
              (statement
                (return_statement
                  (expression
                    (logic_or_expression
                      (logic_and_expression
                        (equality_expression
                          (comparison_expression
                            (sum_expression
                              (product_expression
                                (power_expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (keyword_constant)))))))))))))))))
        (declaration
          (auto_declaration
            (identifier)
            (expression
              (logic_or_expression
                (logic_and_expression
                  (equality_expression
                    (comparison_expression
                      (sum_expression
                        (product_expression
                          (power_expression
                            (unary_expression
                              (postfix_expression
                                (call_expression
                                  (call_target
                                    (field_access
                                      (member_object
                                        (identifier))
                                      (identifier))))))))))))))))
        (statement
          (return_statement
            (expression
              (logic_or_expression
                (logic_and_expression
                  (equality_expression
                    (comparison_expression
                      (sum_expression
                        (product_expression
                          (power_expression
                            (unary_expression
                              (postfix_expression
                                (call_expression
                                  (call_target
                                    (identifier))
                                  (argument_list
                                    (expression
                                      (logic_or_expression
                                        (logic_and_expression
                                          (equality_expression
                                            (comparison_expression
                                              (sum_expression
                                                (product_expression
                                                  (power_expression
                                                    (unary_expression
                                                      (unary_expression
                                                        (postfix_expression
                                                          (primary_expression
                                                            (identifier)))))))))))))))))))))))))))))))
